Adding the pdf output

--- a/my_snippets.ipynb
+++ b/my_snippets.ipynb
@@ -132,7 +132,7 @@
       },
       "source": [
         "colab_environment = True\n",
-        "document_url = \"https://colab.research.google.com/github/Jaidon-Smith/Google-Colab-Github/blob/master/My%20Colab-Github%20Workflow/Setup.ipynb#scrollTo=HXa_8yBvaL1H\"\n",
+        "document_url = \"https://colab.research.google.com/github/Jaidon-Smith/Google-Colab-Public/blob/main/my_snippets.ipynb#scrollTo=S8_U8eb7MWll\"\n",
         "\n",
         "if colab_environment:\n",
         "  #Get the github ssh command and cd directory from the document url\n",
@@ -175,6 +175,26 @@
       },
       "source": [
         "!git pull"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "EDrxVgm3MQTL"
+      },
+      "source": [
+        "# Saving this colab as a pdf"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "S8_U8eb7MWll"
+      },
+      "source": [
+        "!jupyter nbconvert --to html l03c01_classifying_images_of_clothing.ipynb"
       ],
       "execution_count": null,
       "outputs": []
