completed html conversion

--- a/my_snippets.ipynb
+++ b/my_snippets.ipynb
@@ -128,7 +128,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "HXa_8yBvaL1H"
+        "id": "HXa_8yBvaL1H",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d89610cc-4b01-4980-dbfe-e3460eb1cc83"
       },
       "source": [
         "colab_environment = True\n",
@@ -155,8 +159,25 @@
         "  directory = \"/content/{}/{}\".format(repository_name, directory_name)\n",
         "  %cd $directory"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Mounted at /content/drive\n",
+            "Cloning into 'Google-Colab-Public'...\n",
+            "Warning: Permanently added the RSA host key for IP address '140.82.112.3' to the list of known hosts.\n",
+            "remote: Enumerating objects: 9, done.\u001b[K\n",
+            "remote: Counting objects: 100% (9/9), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (7/7), done.\u001b[K\n",
+            "remote: Total 9 (delta 1), reused 2 (delta 0), pack-reused 0\u001b[K\n",
+            "Receiving objects: 100% (9/9), done.\n",
+            "Resolving deltas: 100% (1/1), done.\n",
+            "/content/Google-Colab-Public\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -191,10 +212,38 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "S8_U8eb7MWll"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "S8_U8eb7MWll",
+        "outputId": "21f746bb-8b17-4d83-be65-20e0cb8d5948"
       },
       "source": [
-        "!jupyter nbconvert --to html l03c01_classifying_images_of_clothing.ipynb"
+        "file_name = \"my_snippets.ipynb\"\n",
+        "\n",
+        "output_name = file_name.split(\".ipynb\")[0]+\".html\"\n",
+        "!jupyter nbconvert --to html $file_name\n",
+        "!cp  $output_name \"/content\""
+      ],
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[NbConvertApp] Converting notebook my_snippets.ipynb to html\n",
+            "[NbConvertApp] Writing 282471 bytes to my_snippets.html\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UfhMc_8NP-2a"
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
