--- a/my_snippets.ipynb
+++ b/my_snippets.ipynb
@@ -238,6 +238,35 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "t4p6s-O7EOGd"
+      },
+      "source": [
+        "# TensorBoard at External Url"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "apl-HH4TETsJ"
+      },
+      "source": [
+        "# Setup TensorBoard at an external url\n",
+        "# Code from: https://www.dlology.com/blog/quick-guide-to-run-tensorboard-in-google-colab/\n",
+        "\n",
+        "!wget https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-linux-amd64.zip\n",
+        "!unzip ngrok-stable-linux-amd64.zip\n",
+        "\n",
+        "get_ipython().system_raw('./ngrok http 6006 &')\n",
+        "\n",
+        "!curl -s http://localhost:4040/api/tunnels | python3 -c \\\n",
+        "    \"import sys, json; print(json.load(sys.stdin)['tunnels'][0]['public_url'])\""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
